# IHT-2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
files/: small_data_file.txt  test_file1.txt  test_file2.txt  test_file3.txt  test_file4.txt
include/: auxiliary_functions.h  lib_parallel.h  lib_realisation.h  lib_sequintally.h  realisation.h  vec_sys_struct.h
src/: auxiliary_functions.c  lib_parallel.c  lib_realisation.c  lib_sequintally.c  main.c  realisation.c
time_test/: CMakeLists.txt  main.cpp  test.cpp
